--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.1.4",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "@unocss/nuxt": "^0.45.13",
     "@vueuse/core": "^9.1.1",
     "@vueuse/nuxt": "^9.1.1",
+    "eslint": "^8.23.0",
+    "eslint-plugin-vue": "^9.4.0",
     "nuxt": "3.0.0-rc.8",
     "sass": "^1.54.7",
     "unocss": "^0.45.13"
