--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.7",
     "@lzy1960/eslint-config": "^0.0.6",
     "@lzy1960/eslint-config-basic": "^0.0.6",
     "@lzy1960/eslint-config-vue": "^0.0.6",
@@ -15,6 +16,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@unocss/nuxt": "^0.45.13",
+    "@unocss/preset-icons": "^0.45.14",
     "@vueuse/core": "^9.1.1",
     "@vueuse/nuxt": "^9.1.1",
     "eslint": "^8.23.0",
