--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.1.7",
-    "@lzy1960/eslint-config": "^0.0.7",
+    "@iconify-json/carbon": "^1.1.8",
+    "@lzy1960/eslint-config": "0.0.14",
     "@nuxtjs/color-mode": "^3.1.4",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
@@ -18,9 +18,10 @@
     "@vueuse/core": "^9.1.1",
     "@vueuse/nuxt": "^9.1.1",
     "eslint": "^8.23.0",
-    "eslint-plugin-vue": "^9.4.0",
+    "eslint-plugin-vue": "^9.5.1",
     "nuxt": "3.0.0-rc.8",
     "sass": "^1.54.7",
+    "typescript": "^4.8.3",
     "unocss": "^0.45.13"
   }
 }
