--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.8",
-    "@lzy1960/eslint-config": "0.0.14",
+    "@lzy1960/eslint-config": "^0.1.1",
     "@nuxtjs/color-mode": "^3.1.4",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "@unocss/nuxt": "^0.45.13",
-    "@unocss/preset-icons": "^0.45.14",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "@unocss/nuxt": "^0.45.22",
+    "@unocss/preset-icons": "^0.45.22",
     "@vueuse/core": "^9.1.1",
     "@vueuse/nuxt": "^9.1.1",
     "eslint": "^8.23.0",
@@ -22,6 +22,6 @@
     "nuxt": "3.0.0-rc.8",
     "sass": "^1.54.7",
     "typescript": "^4.8.3",
-    "unocss": "^0.45.13"
+    "unocss": "^0.45.22"
   }
 }
