--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.8",
-    "@lzy1960/eslint-config": "^0.1.1",
-    "@nuxtjs/color-mode": "^3.1.4",
-    "@unocss/nuxt": "^0.45.22",
-    "@unocss/preset-icons": "^0.45.22",
-    "@vueuse/core": "^9.1.1",
-    "@vueuse/nuxt": "^9.1.1",
-    "eslint": "^8.23.0",
-    "nuxt": "3.0.0-rc.8",
-    "sass": "^1.54.7",
-    "typescript": "^4.8.3",
-    "unocss": "^0.45.22"
+    "@lzy1960/eslint-config": "^0.1.7",
+    "@nuxtjs/color-mode": "^3.1.6",
+    "@unocss/nuxt": "^0.45.26",
+    "@unocss/preset-icons": "^0.45.26",
+    "@vueuse/core": "^9.3.0",
+    "@vueuse/nuxt": "^9.3.0",
+    "eslint": "^8.24.0",
+    "nuxt": "^3.0.0-rc.11",
+    "sass": "^1.55.0",
+    "typescript": "^4.8.4",
+    "unocss": "^0.45.26"
   }
 }
