--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "lint": "eslint ."
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.1.8",
-    "@lzy1960/eslint-config": "^0.1.7",
-    "@nuxtjs/color-mode": "^3.1.6",
-    "@unocss/nuxt": "^0.45.26",
-    "@unocss/preset-icons": "^0.45.26",
-    "@vueuse/core": "^9.3.0",
-    "@vueuse/nuxt": "^9.3.0",
-    "eslint": "^8.24.0",
-    "nuxt": "^3.0.0-rc.11",
-    "sass": "^1.55.0",
-    "typescript": "^4.8.4",
-    "unocss": "^0.45.26"
+    "@iconify-json/carbon": "^1.1.16",
+    "@lzy1960/eslint-config": "^0.1.12",
+    "@nuxtjs/color-mode": "^3.2.0",
+    "@unocss/nuxt": "^0.45.30",
+    "@unocss/preset-icons": "^0.45.30",
+    "@vueuse/core": "^9.13.0",
+    "@vueuse/nuxt": "^9.13.0",
+    "eslint": "^8.36.0",
+    "nuxt": "^3.2.3",
+    "sass": "^1.59.2",
+    "typescript": "^4.9.5",
+    "unocss": "^0.45.30"
   }
 }
